Moved to FastEndpoints
