# UsingAuthorizationWithSwagger/UsingAuthorizationWithSwagger/obj/UsingAuthorizationWithSwagger.csproj.nuget.dgspec.json
@@ -1,30 +1,25 @@
 {
   "format": 1,
   "restore": {
-    "D:\\Projects\\Git\\CodeMazeGuides\\authorization-dotnet\\UsingAuthorizationWithSwagger\\UsingAuthorizationWithSwagger\\UsingAuthorizationWithSwagger.csproj": {}
+    "/home/nixel549/Git/AuthorizationWithRolesExample/UsingAuthorizationWithSwagger/UsingAuthorizationWithSwagger/UsingAuthorizationWithSwagger.csproj": {}
   },
   "projects": {
-    "D:\\Projects\\Git\\CodeMazeGuides\\authorization-dotnet\\UsingAuthorizationWithSwagger\\UsingAuthorizationWithSwagger\\UsingAuthorizationWithSwagger.csproj": {
+    "/home/nixel549/Git/AuthorizationWithRolesExample/UsingAuthorizationWithSwagger/UsingAuthorizationWithSwagger/UsingAuthorizationWithSwagger.csproj": {
       "version": "1.0.0",
       "restore": {
-        "projectUniqueName": "D:\\Projects\\Git\\CodeMazeGuides\\authorization-dotnet\\UsingAuthorizationWithSwagger\\UsingAuthorizationWithSwagger\\UsingAuthorizationWithSwagger.csproj",
+        "projectUniqueName": "/home/nixel549/Git/AuthorizationWithRolesExample/UsingAuthorizationWithSwagger/UsingAuthorizationWithSwagger/UsingAuthorizationWithSwagger.csproj",
         "projectName": "UsingAuthorizationWithSwagger",
-        "projectPath": "D:\\Projects\\Git\\CodeMazeGuides\\authorization-dotnet\\UsingAuthorizationWithSwagger\\UsingAuthorizationWithSwagger\\UsingAuthorizationWithSwagger.csproj",
-        "packagesPath": "C:\\Users\\Nikitocik\\.nuget\\packages\\",
-        "outputPath": "D:\\Projects\\Git\\CodeMazeGuides\\authorization-dotnet\\UsingAuthorizationWithSwagger\\UsingAuthorizationWithSwagger\\obj\\",
+        "projectPath": "/home/nixel549/Git/AuthorizationWithRolesExample/UsingAuthorizationWithSwagger/UsingAuthorizationWithSwagger/UsingAuthorizationWithSwagger.csproj",
+        "packagesPath": "/home/nixel549/.nuget/packages/",
+        "outputPath": "/home/nixel549/Git/AuthorizationWithRolesExample/UsingAuthorizationWithSwagger/UsingAuthorizationWithSwagger/obj/",
         "projectStyle": "PackageReference",
-        "fallbackFolders": [
-          "C:\\Program Files\\dotnet\\sdk\\NuGetFallbackFolder"
-        ],
         "configFilePaths": [
-          "C:\\Users\\Nikitocik\\AppData\\Roaming\\NuGet\\NuGet.Config",
-          "C:\\Program Files (x86)\\NuGet\\Config\\Microsoft.VisualStudio.Offline.config"
+          "/home/nixel549/.nuget/NuGet/NuGet.Config"
         ],
         "originalTargetFrameworks": [
           "net6.0"
         ],
         "sources": {
-          "C:\\Program Files (x86)\\Microsoft SDKs\\NuGetPackages\\": {},
           "https://api.nuget.org/v3/index.json": {}
         },
         "frameworks": {
@@ -43,6 +38,18 @@
         "net6.0": {
           "targetAlias": "net6.0",
           "dependencies": {
+            "FastEndpoints": {
+              "target": "Package",
+              "version": "[4.2.0, )"
+            },
+            "FastEndpoints.Swagger": {
+              "target": "Package",
+              "version": "[4.2.0, )"
+            },
+            "FluentValidation": {
+              "target": "Package",
+              "version": "[11.0.2, )"
+            },
             "Microsoft.AspNetCore.Authentication.JwtBearer": {
               "target": "Package",
               "version": "[6.0.0, )"
@@ -66,6 +73,12 @@
           ],
           "assetTargetFallback": true,
           "warn": true,
+          "downloadDependencies": [
+            {
+              "name": "Microsoft.AspNetCore.App.Ref",
+              "version": "[6.0.2, 6.0.2]"
+            }
+          ],
           "frameworkReferences": {
             "Microsoft.AspNetCore.App": {
               "privateAssets": "none"
@@ -74,7 +87,7 @@
               "privateAssets": "all"
             }
           },
-          "runtimeIdentifierGraphPath": "C:\\Program Files\\dotnet\\sdk\\6.0.101\\RuntimeIdentifierGraph.json"
+          "runtimeIdentifierGraphPath": "/usr/share/dotnet/sdk/6.0.102/RuntimeIdentifierGraph.json"
         }
       }
     }
